--- a/gp.html
+++ b/gp.html
@@ -27,12 +27,12 @@
       }
 
       #app5 .div1 {
-        background-color: #0a894a;
+        background-color: #009900;
         margin-bottom: 15px;
       }
 
       #app5 .div2 {
-        background-color: #742536;
+        background-color: #00a8c6;
         margin-bottom: 15px;
       }
     </style>
@@ -299,7 +299,7 @@
   new Vue({
     el: "#app5",
     data: {
-      total: 48836,
+      total: 47736,
       total2: 100000,
       operateList: [
         {
