--- a/gp.html
+++ b/gp.html
@@ -124,9 +124,9 @@
       beyond: "",
       gpList: [
         {
-          name: "首都在线",
-          buyPrice: 13.627,
-          buyNumber: 35500
+          name: "华民股份",
+          buyPrice: 8.436,
+          buyNumber: 45700
         }
       ],
       myList: [
@@ -134,18 +134,18 @@
         "方正科技",
         "空港股份",
         "北汽蓝谷",
-        "华民股份",
+        // "华民股份",
         "中能电气",
         "星微股份",
-        // "首都在线",
+        "首都在线",
         "铜牛信息",
         "初灵信息",
         "创意信息",
         "中文在线",
         "博雅生物",
         "沃森生物",
-        "恒辉安防",
-        "华体科技"
+        "华体科技",
+        "恒辉安防"
       ]
     },
     created() {
@@ -299,7 +299,7 @@
   new Vue({
     el: "#app5",
     data: {
-      total: 48836,
+      total: 47956,
       total2: 100000,
       operateList: [
         {
@@ -340,7 +340,32 @@
         {
           name: "首都在线",
           buy: 11.18,
-          sell: 14
+          sell: 11.16
+        },
+        {
+          name: "华体科技",
+          buy: 12.98,
+          sell: 11.6
+        },
+        {
+          name: "首都在线",
+          buy: 10.75,
+          sell: 9.72
+        },
+        {
+          name: "铜牛信息",
+          buy: 25,
+          sell: 26.3
+        },
+        {
+          name: "康达新材",
+          buy: 9.45,
+          sell: 9.22
+        },
+        {
+          name: "华民股份",
+          buy: 7.2,
+          sell: 9
         }
       ]
     },
