--- a/gp.html
+++ b/gp.html
@@ -340,7 +340,32 @@
         {
           name: "首都在线",
           buy: 11.18,
-          sell: 14
+          sell: 11.16
+        },
+        {
+          name: "华体科技",
+          buy: 12.98,
+          sell: 11.6
+        },
+        {
+          name: "首都在线",
+          buy: 10.75,
+          sell: 9.72
+        },
+        {
+          name: "铜牛信息",
+          buy: 25,
+          sell: 26.3
+        },
+        {
+          name: "康达新材",
+          buy: 9.45,
+          sell: 9.22
+        },
+        {
+          name: "华民股份",
+          buy: 7.2,
+          sell: 9
         }
       ]
     },
