--- a/gp.html
+++ b/gp.html
@@ -124,9 +124,9 @@
       beyond: "",
       gpList: [
         {
-          name: "首都在线",
-          buyPrice: 13.627,
-          buyNumber: 35500
+          name: "华民股份",
+          buyPrice: 8.436,
+          buyNumber: 45700
         }
       ],
       myList: [
