--- a/gp.html
+++ b/gp.html
@@ -134,18 +134,18 @@
         "方正科技",
         "空港股份",
         "北汽蓝谷",
-        "华民股份",
+        // "华民股份",
         "中能电气",
         "星微股份",
-        // "首都在线",
+        "首都在线",
         "铜牛信息",
         "初灵信息",
         "创意信息",
         "中文在线",
         "博雅生物",
         "沃森生物",
-        "恒辉安防",
-        "华体科技"
+        "华体科技",
+        "恒辉安防"
       ]
     },
     created() {
